--- a/backoffice.html
+++ b/backoffice.html
@@ -24,7 +24,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active text-white home" aria-current="page" href="#">Home</a>
                         </li>
                 </div>
             </div>
@@ -32,42 +32,53 @@
     </header>
     <main>
         <section>
-            <div class="container mt-5">
-                <form class="row row-cols-1 g-3 needs-validation" novalidate>
-                    <div class="col">
-                        <label for="product" class="form-label">Game Name:</label>
-                        <input type="text" class="form-control" id="name" placeholder="Diablo IV" required>
+            <div class="container d-flex align-items-center justify-content-center">
+                <form class="row row-cols-1 g-3 needs-validation bg-dark p-5 mt-5 shadow-sm customBox" novalidate>
+                    <h1 class="text-white mb-4 fw-bold">Your product:</h1>
+                    <div class="col padd">
+                        <label for="product" class="form-label mb-3">Game Id:</label>
+                        <input type="text" class="form-control controllo mb-2" id="product-id-input"
+                            placeholder="Diablo IV" required>
                         <div class="valid-feedback">
                         </div>
                     </div>
-                    <div class="col">
-                        <label for="product" class="form-label">Game Category:</label>
-                        <input type="text" class="form-control" id="category" placeholder="Open-world RPG" required>
+                    <div class="col padd">
+                        <label for="product" class="form-label mb-3">Game Name:</label>
+                        <input type="text" class="form-control controllo mb-2" id="name" placeholder="Diablo IV"
+                            required>
                         <div class="valid-feedback">
                         </div>
                     </div>
-                    <div class="col">
-                        <label for="product" class="form-label">Game Brand:</label>
-                        <select class="form-select" aria-label="Default select example">
-                            <option selected>CD Project</option>
-                            <option value="2">BioWare</option>
-                            <option value="3">Bethesda Game Studios</option>
-                            <option value="4">Square Enix</option>
-                        </select>
-                        <div class="col">
-                            <label for="product" class="form-label mt-3">Game ImageURL:</label>
-                            <input type="text" class="form-control" id="img"
-                                placeholder="https://m.media-amazon.com/images/I/61SrkfhCyCL._AC_SL1400_.jpg" required>
-                            <div class="valid-feedback">
-                            </div>
-                            <div class="col mt-3">
-                                <label for="exampleNumber">Game price:</label>
-                                <input type="number" class="form-control" id="price" placeholder="€">
-                            </div>
-                            <div class="valid-feedback">
-                            </div>
-                        </div>
-
+                    <div class="col padd">
+                        <label for="product" class="form-label mb-3">Game Category:</label>
+                        <input type="text" class="form-control controllo mb-2" id="category"
+                            placeholder="Open-world RPG" required>
+                    </div>
+                    <div class="col padd">
+                        <label for="product" class="form-label mb-3">Game Brand:</label>
+                        <select class="form-select mb-2" aria-label="Default select example">
+                            <option class="bg-dark text-white" selected>CD Project</option>
+                            <option class="bg-dark text-white">BioWare</option>
+                            <option class="bg-dark text-white">Bethesda Game Studios</option>
+                            <option class="bg-dark text-white">Square Enix</option>
+                    </div>
+                    </select>
+                    <div class="col padd">
+                        <label for="product" class="form-label mt-3 mb-3">Game ImageURL:</label>
+                        <input type="text" class="form-control controllo" id="img"
+                            placeholder="https://m.media-amazon.com/images/I/61SrkfhCyCL._AC_SL1400_.jpg" required>
+                    </div>
+                    <div class="col padd mt-4">
+                        <label for="exampleNumber" class="form-label">Game price:</label>
+                        <input type="number" class="form-control mt-2 controllo" id="price" placeholder="€">
+                    </div>
+                    <div class="d-flex flex-row justify-content-end mt-3">
+                        <button type="button" class="btn btn-primary mt-3 px-3 invia">Add</button>
+                        <button type="button" class="btn btn-warning mt-3 px-3 mx-4 invia">Edit</button>
+                        <button type="button" class="btn btn-danger mt-3 px-3 cancella">Delete</button>
+                    </div>
+                    <div class="d-flex flex-row justify-content-end mt-3">
+                        <button type="button" class="btn btn-light mt-3 px-3 back">Back</button>
                     </div>
                 </form>
         </section>
