--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-dark">
+        <nav class="navbar navbar-expand-lg bg-dark shadow-lg">
             <div class="container-fluid">
                 <a class="navbar-brand text-danger" href="#">GameStart <i class="bi bi-controller"></i></a>
                 <button class="navbar-toggler bg-danger" type="button" data-bs-toggle="collapse"
@@ -24,24 +24,21 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <a class="nav-link active text-white" aria-current="page" href="#">Back Office</a>
+                        <a class="nav-link active text-white office" aria-current="page" href="#">Back Office</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-white" href="#" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Shop
                             </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <ul class="dropdown-menu bg-dark">
+                                <li><a class="dropdown-item text-white" href="#">New Releases</a></li>
+                                <li><a class="dropdown-item text-white" href="#">RPG</a></li>
                                 <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
                             </ul>
                         </li>
                     </ul>
-                    <a class="text-danger text-decoration-none" href="#"><i class="bi bi-cart fs-3"></i>Carrello</a>
+                    <a class="text-danger text-decoration-none" href="#"><i class="bi bi-cart fs-3"></i>Cart</a>
                 </div>
             </div>
         </nav>
@@ -50,109 +47,164 @@
     <main>
         <section>
             <div class="container mt-5">
-                <h1 class="mt-3 text-danger">Nuove Uscite:</h1>
+                <h1 class="mt-3 text-white fw-bold">New Games:</h1>
                 <div class="row row-cols-4 g-5 mt-2">
                     <div class="col">
-                        <div class="card" style="width: 18rem;">
-                            <img src="..." class="card-img-top" alt="...">
+                        <div class="card h-100 shadow-lg" id="data-card-id" style="width: 18rem;">
+                            <img src="..." class="card-img-top h-100" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                <p class="card-text description fw-bold">Some quick example text to build on the card
+                                    title and make
+                                    up the
                                     bulk
                                     of
                                     the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <p class="card-text brand"></p>
+                                <p class="card-text price"></p>
+                                <button type="button" class="btn btn-warning"><i
+                                        class="bi bi-pencil-square"></i></button>
+                                <button type="button" class="btn btn-danger mx-2 elimina"><i
+                                        class="bi bi-trash-fill"></i></button>
                             </div>
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card" style="width: 18rem;">
-                            <img src="..." class="card-img-top" alt="...">
+                        <div class="card h-100 shadow-lg" id="data-card-id" style="width: 18rem;">
+                            <img src="..." class="card-img-top h-100" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                <p class="card-text description fw-bold">Some quick example text to build on
+                                    the card title and make up the
                                     bulk
                                     of
                                     the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <p class="card-text brand"></p>
+                                <p class="card-text price"></p>
+                                <button type="button" class="btn btn-warning"><i
+                                        class="bi bi-pencil-square"></i></button>
+                                <button type="button" class="btn btn-danger mx-2 elimina"><i
+                                        class="bi bi-trash-fill"></i></button>
                             </div>
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card" style="width: 18rem;">
-                            <img src="..." class="card-img-top" alt="...">
+                        <div class="card h-100 shadow-lg" id="data-card-id" style="width: 18rem;">
+                            <img src="..." class="card-img-top h-100" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                <p class="card-text description fw-bold">Some quick example text to build on the card
+                                    title and make
+                                    up the
                                     bulk
                                     of
                                     the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <p class="card-text brand"></p>
+                                <p class="card-text price"></p>
+                                <button type="button" class="btn btn-warning"><i
+                                        class="bi bi-pencil-square"></i></button>
+                                <button type="button" class="btn btn-danger mx-2 elimina"><i
+                                        class="bi bi-trash-fill"></i></button>
                             </div>
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card" style="width: 18rem;">
-                            <img src="..." class="card-img-top" alt="...">
+                        <div class="card h-100 shadow-lg" id="data-card-id" style="width: 18rem;">
+                            <img src="..." class="card-img-top h-100" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                <p class="card-text description fw-bold">Some quick example text to build on the card
+                                    title and make
+                                    up the
                                     bulk
                                     of
                                     the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <p class="card-text brand"></p>
+                                <p class="card-text price"></p>
+                                <button type="button" class="btn btn-warning"><i
+                                        class="bi bi-pencil-square"></i></button>
+                                <button type="button" class="btn btn-danger mx-2 elimina"><i
+                                        class="bi bi-trash-fill"></i></button>
                             </div>
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card" style="width: 18rem;">
-                            <img src="..." class="card-img-top" alt="...">
+                        <div class="card h-100 shadow-lg" id="data-card-id" style="width: 18rem;">
+                            <img src="..." class="card-img-top h-100" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                <p class="card-text description fw-bold">Some quick example text to build on the card
+                                    title and make
+                                    up the
                                     bulk
                                     of
                                     the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <p class="card-text brand"></p>
+                                <p class="card-text price"></p>
+                                <button type="button" class="btn btn-warning"><i
+                                        class="bi bi-pencil-square"></i></button>
+                                <button type="button" class="btn btn-danger mx-2 elimina"><i
+                                        class="bi bi-trash-fill"></i></button>
                             </div>
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card" style="width: 18rem;">
-                            <img src="..." class="card-img-top" alt="...">
+                        <div class="card h-100 shadow-lg" id="data-card-id" style="width: 18rem;">
+                            <img src="..." class="card-img-top h-100" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                <p class="card-text description fw-bold">Some quick example text to build on the card
+                                    title and make
+                                    up the
                                     bulk
                                     of
                                     the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <p class="card-text brand"></p>
+                                <p class="card-text price"></p>
+                                <button type="button" class="btn btn-warning"><i
+                                        class="bi bi-pencil-square"></i></button>
+                                <button type="button" class="btn btn-danger mx-2 elimina"><i
+                                        class="bi bi-trash-fill"></i></button>
                             </div>
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card" style="width: 18rem;">
-                            <img src="..." class="card-img-top" alt="...">
+                        <div class="card h-100 shadow-lg" id="data-card-id" style="width: 18rem;">
+                            <img src="..." class="card-img-top h-100" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                <p class="card-text description fw-bold">Some quick example text to build on the card
+                                    title and make
+                                    up the
                                     bulk
                                     of
                                     the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <p class="card-text brand"></p>
+                                <p class="card-text price"></p>
+                                <button type="button" class="btn btn-warning"><i
+                                        class="bi bi-pencil-square"></i></button>
+                                <button type="button" class="btn btn-danger mx-2 elimina"><i
+                                        class="bi bi-trash-fill"></i></button>
                             </div>
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card" style="width: 18rem;">
-                            <img src="..." class="card-img-top" alt="...">
+                        <div class="card h-100 shadow-lg" id="data-card-id" style="width: 18rem;">
+                            <img src="..." class="card-img-top h-100" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                <p class="card-text description fw-bold">Some quick example text to build on the card
+                                    title and make
+                                    up the
                                     bulk
                                     of
                                     the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <p class="card-text brand"></p>
+                                <p class="card-text price"></p>
+                                <button type="button" class="btn btn-warning"><i
+                                        class="bi bi-pencil-square"></i></button>
+                                <button type="button" class="btn btn-danger mx-2 elimina"><i
+                                        class="bi bi-trash-fill"></i></button>
                             </div>
                         </div>
                     </div>
