--- a/home.html
+++ b/home.html
@@ -48,168 +48,9 @@
         <section>
             <div class="container mt-5">
                 <h1 class="mt-3 text-white fw-bold">New Games:</h1>
-                <div class="row row-cols-4 g-5 mt-2">
-                    <div class="col">
-                        <div class="card h-100 shadow-lg" id="data-card-id" style="width: 18rem;">
-                            <img src="..." class="card-img-top h-100" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text description fw-bold">Some quick example text to build on the card
-                                    title and make
-                                    up the
-                                    bulk
-                                    of
-                                    the card's content.</p>
-                                <p class="card-text brand"></p>
-                                <p class="card-text price"></p>
-                                <button type="button" class="btn btn-warning"><i
-                                        class="bi bi-pencil-square"></i></button>
-                                <button type="button" class="btn btn-danger mx-2 elimina"><i
-                                        class="bi bi-trash-fill"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card h-100 shadow-lg" id="data-card-id" style="width: 18rem;">
-                            <img src="..." class="card-img-top h-100" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text description fw-bold">Some quick example text to build on
-                                    the card title and make up the
-                                    bulk
-                                    of
-                                    the card's content.</p>
-                                <p class="card-text brand"></p>
-                                <p class="card-text price"></p>
-                                <button type="button" class="btn btn-warning"><i
-                                        class="bi bi-pencil-square"></i></button>
-                                <button type="button" class="btn btn-danger mx-2 elimina"><i
-                                        class="bi bi-trash-fill"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card h-100 shadow-lg" id="data-card-id" style="width: 18rem;">
-                            <img src="..." class="card-img-top h-100" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text description fw-bold">Some quick example text to build on the card
-                                    title and make
-                                    up the
-                                    bulk
-                                    of
-                                    the card's content.</p>
-                                <p class="card-text brand"></p>
-                                <p class="card-text price"></p>
-                                <button type="button" class="btn btn-warning"><i
-                                        class="bi bi-pencil-square"></i></button>
-                                <button type="button" class="btn btn-danger mx-2 elimina"><i
-                                        class="bi bi-trash-fill"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card h-100 shadow-lg" id="data-card-id" style="width: 18rem;">
-                            <img src="..." class="card-img-top h-100" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text description fw-bold">Some quick example text to build on the card
-                                    title and make
-                                    up the
-                                    bulk
-                                    of
-                                    the card's content.</p>
-                                <p class="card-text brand"></p>
-                                <p class="card-text price"></p>
-                                <button type="button" class="btn btn-warning"><i
-                                        class="bi bi-pencil-square"></i></button>
-                                <button type="button" class="btn btn-danger mx-2 elimina"><i
-                                        class="bi bi-trash-fill"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card h-100 shadow-lg" id="data-card-id" style="width: 18rem;">
-                            <img src="..." class="card-img-top h-100" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text description fw-bold">Some quick example text to build on the card
-                                    title and make
-                                    up the
-                                    bulk
-                                    of
-                                    the card's content.</p>
-                                <p class="card-text brand"></p>
-                                <p class="card-text price"></p>
-                                <button type="button" class="btn btn-warning"><i
-                                        class="bi bi-pencil-square"></i></button>
-                                <button type="button" class="btn btn-danger mx-2 elimina"><i
-                                        class="bi bi-trash-fill"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card h-100 shadow-lg" id="data-card-id" style="width: 18rem;">
-                            <img src="..." class="card-img-top h-100" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text description fw-bold">Some quick example text to build on the card
-                                    title and make
-                                    up the
-                                    bulk
-                                    of
-                                    the card's content.</p>
-                                <p class="card-text brand"></p>
-                                <p class="card-text price"></p>
-                                <button type="button" class="btn btn-warning"><i
-                                        class="bi bi-pencil-square"></i></button>
-                                <button type="button" class="btn btn-danger mx-2 elimina"><i
-                                        class="bi bi-trash-fill"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card h-100 shadow-lg" id="data-card-id" style="width: 18rem;">
-                            <img src="..." class="card-img-top h-100" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text description fw-bold">Some quick example text to build on the card
-                                    title and make
-                                    up the
-                                    bulk
-                                    of
-                                    the card's content.</p>
-                                <p class="card-text brand"></p>
-                                <p class="card-text price"></p>
-                                <button type="button" class="btn btn-warning"><i
-                                        class="bi bi-pencil-square"></i></button>
-                                <button type="button" class="btn btn-danger mx-2 elimina"><i
-                                        class="bi bi-trash-fill"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card h-100 shadow-lg" id="data-card-id" style="width: 18rem;">
-                            <img src="..." class="card-img-top h-100" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text description fw-bold">Some quick example text to build on the card
-                                    title and make
-                                    up the
-                                    bulk
-                                    of
-                                    the card's content.</p>
-                                <p class="card-text brand"></p>
-                                <p class="card-text price"></p>
-                                <button type="button" class="btn btn-warning"><i
-                                        class="bi bi-pencil-square"></i></button>
-                                <button type="button" class="btn btn-danger mx-2 elimina"><i
-                                        class="bi bi-trash-fill"></i></button>
-                            </div>
-                        </div>
-                    </div>
+                <div
+                    class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-sm-2 g-md-3 g-lg-4 g-xl-5 mt-2 append">
                 </div>
-            </div>
         </section>
     </main>
 
