--- a/backoffice.html
+++ b/backoffice.html
@@ -16,8 +16,8 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand text-danger" href="#">GameStart <i class="bi bi-controller"></i></a>
-                <button class="navbar-toggler bg-danger" type="button" data-bs-toggle="collapse"
+                <a class="navbar-brand text-danger" href="home.html">GameStart <i class="bi bi-controller"></i></a>
+                <button class="navbar-toggler bg-danger" style="width: 50px;" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
